alignment fix

--- a/app/containers/SignIn/SignIn.scss
+++ b/app/containers/SignIn/SignIn.scss
@@ -4,10 +4,10 @@
 
 @layer components {
   .sign-in-align {
-    @apply py-8 bg-primary-brightest h-screen;
+    @apply big:py-8 bg-primary-brightest h-screen;
 
     .sign-in-section {
-      @apply h-full flex flex-col big:flex-row items-center justify-around px-8 gap-6;
+      @apply h-full big:flex flex-col big:flex-row items-start justify-center big:justify-around py-40 px-6 big:px-8 big:py-0 big:gap-6 align-middle;
 
       &-img {
         @apply big:max-w-lg hidden big:flex;
